--- a/src/test/unit/jsTestDriver.conf
+++ b/src/test/unit/jsTestDriver.conf
@@ -1,14 +1,11 @@
 server: http://localhost:9876
 
 load:
+  - ../lib/jasmine-1.3.1/*.js
+  - ../lib/jasmine-1.3.1/JasmineAdapter.js
   - ../../main/webapp/assets/js/angular-1.1.1.js
   - ../../main/webapp/assets/js/angular-resource-1.1.1.js
-  - ../../main/webapp/assets/js/angular-sanitize-1.1.1.js
-  - ../../main/webapp/assets/js/jquery-1.8.2-min.js
-  - ../lib/require/*.js
   - ../lib/angular/angular-mocks-1.1.1.js
-
-  - ../lib/jasmine-1.3.1/*.js
   - ../../main/webapp/js/*.js
   - specs/*.js
 
