--- a/src/test/unit/jsTestDriver.conf
+++ b/src/test/unit/jsTestDriver.conf
@@ -2,10 +2,10 @@ server: http://localhost:9876
 
 load:
   - ../lib/jasmine-1.3.1/*.js
-  - ../lib/jasmine-1.3.1/JasmineAdapter.js
   - ../../main/webapp/assets/js/angular-1.1.1.js
   - ../../main/webapp/assets/js/angular-resource-1.1.1.js
   - ../lib/angular/angular-mocks-1.1.1.js
   - ../../main/webapp/js/*.js
-  - specs/*.js
 
+test:
+  - specs/*.js
